With fixes