@@ -5,12 +5,10 @@ import com.example.carservice.dto.mapper.ServiceMapper;
 import com.example.carservice.model.ServiceEntity;
 import com.example.carservice.service.ServiceInterface;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -22,11 +20,11 @@ public class ServiceController {
   private final ServiceInterface service;
   private final ServiceMapper mapper;
 
-  @RequestMapping(value = "/all", method = RequestMethod.GET)
+  @GetMapping("/all")
   public List<ServiceDto> getAllServices() {
     return service.getAllServices().stream()
         .map(mapper::toDto)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @GetMapping("/{id}")
@@ -50,7 +48,7 @@ public class ServiceController {
 
     return services.stream()
         .map(mapper::toDto)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private List<ServiceEntity> filterByCategory(List<ServiceEntity> services,
@@ -60,7 +58,7 @@ public class ServiceController {
     }
     return services.stream()
         .filter(s -> category.equalsIgnoreCase(s.getCategory()))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private List<ServiceEntity> filterByAvailability(List<ServiceEntity> services,
@@ -70,6 +68,6 @@ public class ServiceController {
     }
     return services.stream()
         .filter(s -> available.equals(s.getAvailable()))
-        .collect(Collectors.toList());
+        .toList();
   }
 }
